refactor(dapp): no_issue husky

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lint": "next lint",
     "lint-staged": "lint-staged",
     "prepare": "husky install",
+    "postinstall": "husky install",
     "build:development": "make build-development",
     "start:development": "make start-development",
     "build:staging": "make build-staging",
@@ -96,7 +97,7 @@
     "eslint-config-next": "^14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-storybook": "0.8.0",
-    "husky": "^9.0.11",
+    "husky": "8.0.0",
     "jsdom": "^24.1.0",
     "lint-staged": "^15.2.7",
     "postcss": "8.4.38",
