refactor(dapp): no_issue update husky rules

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,12 +2,12 @@
   // Use IntelliSense to learn about possible attributes.
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
+  "version": "14.2.4",
   "configurations": [
     {
       "type": "chrome",
       "request": "launch",
-      "name": "Debug Nextjs Core Project",
+      "name": "Debug Nextjs Boilerplate",
       "url": "http://localhost:3000",
       "webRoot": "${workspaceFolder}"
     }
