--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "@utils/*": ["src/utils/*"],
       "@scripts/*": ["scripts/*"],
       "@stores/*": ["stores/*"],
-      "@actions/*": ["src/actions/*"]
+      "@actions/*": ["src/actions/*"],
+      "@hooks/*": ["src/hooks/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
