--- a/package.json
+++ b/package.json
@@ -54,12 +54,15 @@
     "canvas-confetti": "1.9.3",
     "clsx": "2.1.1",
     "cookies-next": "^4.2.1",
+    "country-list": "2.3.0",
     "framer-motion": "^11.2.10",
     "next": "14.2.4",
     "nextjs-toploader": "1.6.12",
     "qs": "^6.12.1",
     "react": "18.3.1",
+    "react-country-flag": "3.1.0",
     "react-dom": "18.3.1",
+    "react-select": "5.8.0",
     "server-only": "^0.0.1",
     "sharp": "^0.32.6",
     "sonner": "1.5.0",
@@ -86,6 +89,7 @@
     "@storybook/testing-library": "0.2.2",
     "@testing-library/react": "^16.0.0",
     "@types/canvas-confetti": "1.6.4",
+    "@types/country-list": "2.1.4",
     "@types/node": "^20.14.5",
     "@types/qs": "^6.9.15",
     "@types/react": "^18.3.3",
