--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "sharp": "^0.32.6",
     "sonner": "1.5.0",
     "sweetalert2": "11.12.0",
+    "swr": "2.2.5",
     "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "1.0.7",
     "usehooks-ts": "3.1.0",
