--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "clsx": "2.1.1",
     "cookies-next": "^4.2.1",
     "country-list": "2.3.0",
+    "embla-carousel-react": "8.1.6",
     "framer-motion": "^11.2.10",
     "next": "14.2.4",
     "nextjs-toploader": "1.6.12",
@@ -62,6 +63,7 @@
     "react": "18.3.1",
     "react-country-flag": "3.1.0",
     "react-dom": "18.3.1",
+    "react-number-format": "5.4.0",
     "react-select": "5.8.0",
     "server-only": "^0.0.1",
     "sharp": "^0.32.6",
