--- a/package.json
+++ b/package.json
@@ -51,14 +51,17 @@
     "@solana/wallet-adapter-wallets": "0.19.32",
     "@solana/web3.js": "1.93.0",
     "@t3-oss/env-nextjs": "0.10.1",
+    "blob-stream": "0.1.3",
     "canvas-confetti": "1.9.3",
     "clsx": "2.1.1",
     "cookies-next": "^4.2.1",
     "country-list": "2.3.0",
     "embla-carousel-react": "8.1.6",
     "framer-motion": "^11.2.10",
+    "jspdf": "2.5.1",
     "next": "14.2.4",
     "nextjs-toploader": "1.6.12",
+    "pdfkit": "0.15.0",
     "qs": "^6.12.1",
     "react": "18.3.1",
     "react-country-flag": "3.1.0",
@@ -68,6 +71,8 @@
     "server-only": "^0.0.1",
     "sharp": "^0.32.6",
     "sonner": "1.5.0",
+    "svg-to-pdfkit": "0.1.8",
+    "svg2pdf.js": "2.2.4",
     "sweetalert2": "11.12.0",
     "swr": "2.2.5",
     "tailwind-merge": "2.3.0",
@@ -91,11 +96,13 @@
     "@storybook/react": "8.1.10",
     "@storybook/testing-library": "0.2.2",
     "@testing-library/react": "^16.0.0",
+    "@types/blob-stream": "0.1.33",
     "@types/canvas-confetti": "1.6.4",
     "@types/country-list": "2.1.4",
     "@types/node": "^20.14.5",
     "@types/qs": "^6.9.15",
     "@types/react": "^18.3.3",
+    "@types/svg-to-pdfkit": "0.1.3",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
