fix(dapp): no_issue user valiable token popup

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@solana/wallet-adapter-wallets": "0.19.32",
     "@solana/web3.js": "1.95.2",
     "@t3-oss/env-nextjs": "0.11.0",
+    "big.js": "6.2.1",
     "canvas-confetti": "1.9.3",
     "clsx": "2.1.1",
     "cookies-next": "^4.2.1",
@@ -91,6 +92,7 @@
     "@storybook/react": "8.2.7",
     "@storybook/testing-library": "0.2.2",
     "@testing-library/react": "^16.0.0",
+    "@types/big.js": "6.2.2",
     "@types/canvas-confetti": "1.6.4",
     "@types/country-list": "2.1.4",
     "@types/node": "^22.1.0",
