--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "0.30.1",
+    "@metaplex-foundation/mpl-token-metadata": "3.2.1",
     "@nextui-org/react": "2.4.6",
     "@sentry/nextjs": "8.24.0",
     "@solana/spl-token": "0.4.8",
@@ -59,6 +60,7 @@
     "clsx": "2.1.1",
     "cookies-next": "^4.2.1",
     "country-list": "2.3.0",
+    "dayjs": "1.11.12",
     "embla-carousel-react": "8.1.8",
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
