--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "0.30.1",
     "@metaplex-foundation/mpl-token-metadata": "3.2.1",
+    "@metaplex-foundation/umi": "0.9.2",
     "@nextui-org/react": "2.4.6",
     "@sentry/nextjs": "8.24.0",
     "@solana/spl-token": "0.4.8",
