--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "nextjs-toploader": "1.6.12",
+    "qrcode": "1.5.4",
     "qs": "^6.13.0",
     "react": "18.3.1",
     "react-country-flag": "3.1.0",
@@ -102,6 +103,7 @@
     "@types/canvas-confetti": "1.6.4",
     "@types/country-list": "2.1.4",
     "@types/node": "^22.1.0",
+    "@types/qrcode": "1.5.5",
     "@types/qs": "^6.9.15",
     "@types/react": "^18.3.3",
     "@vitejs/plugin-react": "^4.3.1",
