--- a/package.json
+++ b/package.json
@@ -69,9 +69,11 @@
     "qrcode": "1.5.4",
     "qs": "^6.13.0",
     "react": "18.3.1",
+    "react-confetti": "6.1.0",
     "react-country-flag": "3.1.0",
     "react-dom": "18.3.1",
     "react-number-format": "5.4.0",
+    "react-rewards": "2.0.4",
     "react-select": "5.8.0",
     "server-only": "^0.0.1",
     "sharp": "^0.32.6",
