feat(dapp): no_issue burn txs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@adapters/*": ["src/adapters/*"],
+      "@enums/*": ["src/enums/*"],
       "@components/*": ["src/components/*"],
       "@services/*": ["src/services/*"],
       "@styles/*": ["src/styles/*"],
