--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-number-format": "5.4.0",
     "react-rewards": "2.0.4",
     "react-select": "5.8.0",
+    "react-spinners": "0.14.1",
     "server-only": "^0.0.1",
     "sharp": "^0.32.6",
     "sonner": "1.5.0",
