--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@solana/wallet-adapter-wallets": "0.19.32",
     "@solana/web3.js": "1.95.2",
     "@t3-oss/env-nextjs": "0.11.0",
+    "apexcharts": "3.53.0",
     "big.js": "6.2.1",
     "bs58": "6.0.0",
     "canvas-confetti": "1.9.3",
@@ -69,6 +70,7 @@
     "qrcode": "1.5.4",
     "qs": "^6.13.0",
     "react": "18.3.1",
+    "react-apexcharts": "1.4.1",
     "react-confetti": "6.1.0",
     "react-country-flag": "3.1.0",
     "react-dom": "18.3.1",
