--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "autoprefixer": "10.4.20",
     "chalk": "^5.3.0",
     "cross-env": "7.0.3",
+    "cssnano": "7.0.5",
     "dotenv": "16.4.5",
     "eslint": "8.0.0",
     "eslint-config-google": "^0.14.0",
@@ -133,6 +134,7 @@
     "stylelint": "16.8.1",
     "stylelint-config-standard-scss": "13.1.0",
     "tailwindcss": "3.4.7",
+    "terser-webpack-plugin": "5.3.10",
     "typescript": "^5.5.4",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.0.5"
